--- a/core/src/main/resources/assets/timolia/i18n/en_us.json
+++ b/core/src/main/resources/assets/timolia/i18n/en_us.json
@@ -1,7 +1,7 @@
 {
-  "example": {
+  "timolia": {
     "settings": {
-      "name": "ExampleAddon",
+      "name": "Timolia",
       "enabled": {
         "name": "Enabled"
       }
